--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,26 @@
   pointer-events: none;
 }
 
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+.flex{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 15px;
+}
+
+li{
+  list-style: none;
+}
+
+
 
 .App-header {
   background-color: #282c34;
